--- a/arch/arm/mm/Kconfig
+++ b/arch/arm/mm/Kconfig
@@ -422,6 +422,7 @@ config CPU_V7
 	select CPU_32v7
 	select CPU_ABRT_EV7
 	select CPU_PABRT_V7
+	select CPU_SPECTRE if MMU
 	select CPU_CACHE_V7
 	select CPU_CACHE_VIPT
 	select CPU_CP15_MMU
@@ -786,6 +787,9 @@ config CPU_BPREDICT_DISABLE
 	depends on CPU_ARM1020 || CPU_V6 || CPU_V6K || CPU_MOHAWK || CPU_XSC3 || CPU_V7 || CPU_FA526
 	help
 	  Say Y here to disable branch prediction.  If unsure, say N.
+
+config CPU_SPECTRE
+	bool
 
 config TLS_REG_EMUL
 	bool
